force-app/main/default/objects/ProductCategory__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If false, the record must be deleted</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>