force-app/main/default/objects/ProductCategory__c/fields/BCCProductID__c.field-meta.xml
<CustomField>
    <fullName>BCCProductID__c</fullName>
    <label>BCCProductID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>