force-app/main/default/objects/ProductCategory__c/fields/Product_Cat_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Cat_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for integration from OneData.
Concatenation BCCID Category + BCC ID Product + Local</description>
    <externalId>true</externalId>
    <label>Product Cat External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>